# git-cm

./: .editorconfig  .gitignore  Cargo.toml  README.md  changelog.md  readme.md  rustfmt.toml
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: cd.yml  ci.yml  pr-assign.yml
assets/: editor_template.txt
src/: args.rs  cargo.rs  commit.rs  config.rs  git.rs  main.rs  questions.rs  util.rs
