[package]
name = "git-cm"
description = "A git command that generates conventional-friendly commit messages."
repository = "https://github.com/SirWindfield/git-cm"
documentation = "https://docs.rs/git-cm"
version = "0.1.2"
license = "MIT OR Apache-2.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
cargo_toml = "0.8.0"
clap = "3.0.0-beta.1"
console = "0.11.3"
dialoguer = "0.6.2"
edit = "0.1.2"
git2 = "0.13.6"
itertools = "0.9.0"
once_cell = "1.4.0"
serde = { version = "1.0.114", features = ["derive"] }

[package.metadata.commits]
defaults = true
