[package]
name = "git-cm"
description = "A git command that generates conventional-friendly commit messages."
repository = "https://github.com/SirWindfield/git-cm"
documentation = "https://docs.rs/git-cm"
readme = "README.md"
keywords = ["commit", "commitizen", "git"]
categories = ["command-line-utilities", "development-tools"]
version = "0.2.3"
license = "MIT OR Apache-2.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[package.metadata.commits]
defaults = true

[dependencies]
anyhow = "1.0.40"
cargo_toml = "0.9.1"
clap = "3.0.0-beta.2"
console = "0.14.1"
ctrlc = { version = "3.1.9", features = ["termination"] }
dialoguer = "0.8.0"
edit = "0.1.3"
git2 = { version = "0.13.20", default-features = false }
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
