[package]
name = "git-cm"
description = "A git command that generates conventional-friendly commit messages."
repository = "https://github.com/mainrs/git-cm"
documentation = "https://docs.rs/git-cm"
readme = "README.md"
keywords = ["commit", "commitizen", "git"]
categories = ["command-line-utilities", "development-tools"]
version = "0.2.3"
license = "MIT OR Apache-2.0"
authors = ["mainrs"]
edition = "2018"

[package.metadata.commits]
defaults = true

[dependencies]
anyhow = "1.0.40"
cargo_toml = "0.19.2"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
ctrlc = { version = "3.1.9", features = ["termination"] }
dialoguer = "0.11.0"
edit = "0.1.3"
git2 = { version = "0.18.3", default-features = false }
once_cell = "1.7.2"
serde = { version = "1.0.126", features = ["derive"] }
